// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components - chains - ln10_caja_carrusel - components - JwVideoPlayer should match snapshot, div with id for build video 1`] = `
<div>
  <div
    class="video-instance"
    id="test-video-id"
  />
</div>
`;

exports[`components - chains - ln10_caja_carrusel - components - JwVideoPlayer should match snapshot, with placeholder 1`] = `
<div>
  <div
    class="placeholder-jwplayer flex flex-column w-100 h-100 ratio-9-16 jc-center ai-center bg-black"
  />
</div>
`;
